--- a/install_steps/apt.yml
+++ b/install_steps/apt.yml
@@ -9,6 +9,7 @@
     stderr: true
   - command: |
       sudo apt-get install -y --no-install-recommends \
-        dive curl wget jq ripgrep zsh lua5.4 liblua5.4-dev fd-find
+        curl wget jq ripgrep zsh lua5.4 liblua5.4-dev fd-find
     description: APT packages
+    stderr: true
 
