--- a/install_steps/shell.yml
+++ b/install_steps/shell.yml
@@ -1,6 +1,11 @@
 ---
 - clean: ['~']
 
+- shell:
+    - command: cat bash/root.bashrc | sudo tee /root/.bashrc
+      description: Root's bashrc
+      stderr: true
+
 - link:
     ~/.bashrc:
       path: bash/bashrc.sh
