--- a/install_steps/dependencies.yml
+++ b/install_steps/dependencies.yml
@@ -15,6 +15,7 @@
       description: APT packages
       stderr: true
     - command: |
-        export FZF_SRC=https://github.com/junegunn/fzf/releases/download/v0.60.3/fzf-0.60.3-linux_amd64.tar.gz && \
+        set -eo pipefail;
+        FZF_SRC=https://github.com/junegunn/fzf/releases/download/v0.60.3/fzf-0.60.3-linux_amd64.tar.gz;
         curl -sL $FZF_SRC | sudo tar xz -C /usr/local/bin --wildcards "fzf"
       description: fzf
